fixed spacing on the 4 large buttons, and position

--- a/css/design-project.css
+++ b/css/design-project.css
@@ -57,6 +57,6 @@ a {
     border-radius: 50%;
     font-size: .6em;
     text-align: center;
-    color: white;
+    color: black;
     font-family: 'Anton', sans-serif;
 }
